scripts/nullaway/wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8.txt
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/myDatabase.java:85: error: [NullAway] dereferenced expression firstLine is @Nullable
            if (firstLine.next()) {
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/myDatabase.java:92: error: [NullAway] dereferenced expression currentDate is @Nullable
            overviewResult.add(currentDate.toString());
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/myDatabase.java:93: error: [NullAway] dereferenced expression startTime is @Nullable
            overviewResult.add(startTime.toString() + " to " + checkLastTime.substring(0, 8));
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ResultDisplay.java:227: error: [NullAway] dereferenced expression set is @Nullable
            while (set.next()) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ResultDisplay.java:263: error: [NullAway] dereferenced expression set is @Nullable
            while (set.next()) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ResultDisplay.java:349: error: [NullAway] dereferenced expression set is @Nullable
            while (set.next()) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ResultDisplay.java:495: error: [NullAway] dereferenced expression set is @Nullable
            while (set.next()) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Trading_Engine/GraphData.java:15: error: [NullAway] assigning @Nullable expression to @NonNull field
        time = tmpTime;
             ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:65: error: [NullAway] assigning @Nullable expression to @NonNull field
        strategyResult = runResult;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:66: error: [NullAway] assigning @Nullable expression to @NonNull field
        allCompletedTrade = allTrades;
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:67: error: [NullAway] assigning @Nullable expression to @NonNull field
        askFirstList = allFirstAskList;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:68: error: [NullAway] assigning @Nullable expression to @NonNull field
        bidFirstList = allFirstBidList;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:69: error: [NullAway] assigning @Nullable expression to @NonNull field
        strategyAsk = allStraAsk;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:70: error: [NullAway] assigning @Nullable expression to @NonNull field
        strategyBid = allStraBid;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:267: error: [NullAway] dereferenced expression tmp is @Nullable
            double finishTime = tmp.getHours() + (tmp.getMinutes() / 60.0);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:272: error: [NullAway] dereferenced expression tmp is @Nullable
            double finishTime = tmp.getHours() + (tmp.getMinutes() / 60.0);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:315: error: [NullAway] dereferenced expression tmp is @Nullable
            double finishTime = tmp.getHours() + (tmp.getMinutes() / 60.0);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/StrategySelected.java:320: error: [NullAway] dereferenced expression tmp is @Nullable
            double finishTime = tmp.getHours() + (tmp.getMinutes() / 60.0);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Test/myDatabaseTest.java:39: error: [NullAway] dereferenced expression result is @Nullable
            Assert.assertEquals("Error in select count(*)!", 2059, result.getInt(1));
                                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Test/myDatabaseTest.java:50: error: [NullAway] dereferenced expression result1 is @Nullable
            while ((st = br.readLine()) != null && result1.next()) {
                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/Test/myDatabaseTest.java:61: error: [NullAway] dereferenced expression result1 is @Nullable
            result1.close();
                   ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../wpi/url4df616fce9_s3e0n1g1_prototype3_tgz-pJ8-Trading_Engine_MainJ8/src/gui/ChooseStrategy.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
21 errors
